working on classes to make proof of concept plots

--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
 			<version>1.10.19</version>
 			<scope>test</scope>
 		</dependency>
+	  	<dependency>
+	     	<groupId>org.jfree</groupId>
+	     	<artifactId>jfreechart</artifactId>     
+	    		<version>1.0.19</version>
+	  	</dependency>	
 	</dependencies>
 	<build>
 		<plugins>
