--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,13 @@
 	     	<groupId>org.jfree</groupId>
 	     	<artifactId>jfreechart</artifactId>     
 	    		<version>1.0.19</version>
-	  	</dependency>	
+	  	</dependency>
+	  	<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
+		<dependency>
+   			<groupId>com.googlecode.json-simple</groupId>
+    			<artifactId>json-simple</artifactId>
+    			<version>1.1.1</version>    		
+		</dependency>	  		
 	</dependencies>
 	<build>
 		<plugins>
