--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,14 @@
    			<groupId>com.googlecode.json-simple</groupId>
     			<artifactId>json-simple</artifactId>
     			<version>1.1.1</version>    		
-		</dependency>	  		
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.twilio.sdk/twilio -->
+<dependency>
+    <groupId>com.twilio.sdk</groupId>
+    <artifactId>twilio</artifactId>
+    <version>7.4.0</version>
+    <scope>runtime</scope>
+</dependency>
 	</dependencies>
 	<build>
 		<plugins>
